--- a/02.css/index.html
+++ b/02.css/index.html
@@ -37,6 +37,9 @@
     <!-- Declarei sua cor com a tag style no cabeçalho, antes do title-->
 <hr>
 
+    <!-- 48 Position sticky -->
+    <div class="sticky"><span>Eu sou sticky</span></div>
+
     <!-- 4 External -->
     <p> Fui estilizado pelo external CSS</p>
 
@@ -171,10 +174,96 @@
      <div class="margin-2">Eu tenho margin</div>
      <div class="margin-3">Eu tenho margin</div>
 
+    <!-- 31 Box model -->
 
+    <div class="box-model">Tenho todas as propriedades do box Model</div>
 
+     <!-- 32 Desafio 3 -->
+     <div id="box-model-desafio">
+        <h2 class="desafio-title">Vamos estilizar</h2>
+     </div>
 
+     <!-- 33 Alinhamento de texto -->
+     <p class="text-aligned">Alinhando a esquerda</p>
 
+     <div class="container-center">
+        <h2>Estamos centralizados</h2>
+            <p>Algum texto</p>
+     </div>
 
+     <!-- 34 Text decoration -->
+     <p class="underline">Eu tenho underline</p>
+     <p class="line-trough">Eu tenho um risco</p>
+     <a href="#" class="remover-underline">Sem undrline</a>
+
+     <!-- 35 Text transform-->
+     <p class="upper">Caixa alta</p>
+     <p class="lower">ESTE TEXTO EM LOWER</p>
+
+     <!-- 36 Espaçamento de letras -->
+     <h2 class="spacing">Eu tenho um espaçamento maior</h2>
+
+     <!-- 37 Fontes -->
+     <p class="serif">Serif fonte</p>
+     <p class="sans-serif">Sans serif fonte</p>
+     <p class="monospace">Monospace fonte</p>
+     <p class="cursive">Cursive fonte</p>
+     <p class="fantasy">Fantasy fonte</p>
+
+     <!-- 38 Mudar estilo da font com font-style -->
+     <p class="italic">Sou itálico</p>
+     <p class="oblique">Sou oblique</p>
+
+     <!-- 39 Font weight -->
+     <p class="thin">Sou fina</p>
+     <p class="bolde">Estou em bold</p>
+     <p class="bolder">Estou mais forte</p>
+
+     <!-- 40 Font size, tamanho da fonte -->
+     <h4 class="small">Título Pequeno</h4>
+     <h4 class="big">Título Grande</h4>
+
+     <!-- 41 Display-->
+     <!-- div é um abaixo do outro -->
+     <div class="inline-box">a</div>
+     <div class="inline-box">b</div>
+     <div class="inline-box">c</div>
+
+     <!-- Sapn um ao lado do outro inline -->
+     <span class="block">Teste</span>
+     <span class="block">Teste2</span>
+     <span class="block">Teste3</span>
+
+     <!-- 42 Esconder elementos -->
+     <p class="invisible">Me econtre se puder</p>
+
+     <!-- 43 Posição estático-->
+     <div class="static"><span>Eu sou estático</span></div>
+
+     <!-- 44 Posição relativa ao último elemento. Não se move em relação html e sim a tela-->
+     <div class="relative"><span>Eu sou relativo</span></div>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ratione rem quos minus obcaecati nam corrupti repudiandae? Consectetur amet esse quo soluta ratione impedit tenetur et, vel assumenda nemo eos.</p>
+
+     <!-- 45 Posição absoluta -->
+     <div class="absolute"><span>Eu sou absoluto</span></div>
+     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed deleniti totam quia quasi ipsam quibusdam enim, tempora adipisci, quae sit iusto soluta. Culpa quos, magnam dignissimos corrupti inventore praesentium asperiores?</p>
+
+     <!-- 46 Relativo com absoluto -->
+     <div class="relative-container">
+        <div class="absolute-1"></div>
+        <div class="absolute-2"></div>
+     </div>
+
+     <!-- 47 Posição fixed após um scroll da página, o elemento continua fixo na tela -->
+     <div class="fixed"><span>Estou fixo</span></div>
+
+    <!-- 48 Position sticky la em cima em baixo do 3. Se movimenta junto com scroll, mas quando chega no lugar dele, ele fica parado-->
+
+    <!-- 49 Z-index cria um indez de quem vai ficar na frente do outro -->
+     <div class="relative-container">
+        <div class="absolute-3"></div>
+        <div class="absolute-4"></div>
+        <div class="absolute-5"></div>
+    </div>
 </body>
 </html>
