Formulário venda de carro

--- a/03.formularios/index.html
+++ b/03.formularios/index.html
@@ -176,9 +176,7 @@
 
 
 
-
-
-    <!-- 13 Rasetar -->
+    <!-- 13 Resetar -->
     <input type="reset" value="Limpar"> <!-- Adiciona um botão "Limpas" e clicando nele limpa todas as informações -->
 
     
