--- a/08_proj_clone/index.html
+++ b/08_proj_clone/index.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="regiter-container">
+                <div id="register-container">
                     <p>Não tem uma conta? <a href="#">Cadastre-se</a></p>
                 </div>
                 <div id="get-app-container">
@@ -77,7 +77,7 @@
                 <li><a href="#">Principais Contas</a></li>
                 <li><a href="#">Hashtags</a></li>
                 <li><a href="#">Localização</a></li>
-                <li><a href="#"></a>Instagram Lite</li>
+                <li><a href="#">Instagram Lite</a></li>
             </ul>
         </nav>
         <p id="copyright">&copy;2023 Instagram from Meta</p>
